--- a/MultiServiceBrowser/Properties/Resources.resx
+++ b/MultiServiceBrowser/Properties/Resources.resx
@@ -124,6 +124,9 @@
   <data name="Info_64px" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Info_64px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Menu_64px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Menu_64px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="Plus_64px" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Plus_64px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
